# nk-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.cursor/rules/: general.mdc  steps.mdc
.scripts/: add-library.ps1  compile-shaders.bat  libraries.csv  library.ps1
editor/: CMakeLists.txt
editor/src/: editor.cpp
engine/: CMakeLists.txt
engine/assets/shaders/: Builtin.ObjectShader.fragment.slang  Builtin.ObjectShader.vertex.slang  Builtin.PointLight.fragment.slang  Builtin.PointLight.vertex.slang  Builtin.SimpleShader.fragment.slang  Builtin.SimpleShader.vertex.slang
engine/include/: nkpch.h
engine/include/collections/: arr.h  arr_type.h  dyarr.h  map.h
engine/include/core/: app.h  app_creator.h  arr.h  arr_type.h  assertion.h  camera.h  defines.h  dyarr.h  dyarr_type.h  entry_point.h  hash_map.h  input.h  input_codes.h  iterator.h  map.h  os.h  rb_map.h  result.h
engine/include/core/map/: detail.h
engine/include/event/: action.h  event.h  event_handler_old.h  event_old.h  function.h
engine/include/macros/: map.h  util.h
engine/include/math/: types.h  vec2.h
engine/include/math/vec/: ivec2.h
engine/include/memory/: allocator.h  linear_allocator.h  malloc_allocator.h  memory_type.h  native.h
engine/include/new_memory/: allocator.h  memory_type.h
engine/include/nk/: app.h  app_creator.h  clock.h  entry_point.h  input.h  input_codes.h  window.h
engine/include/resources/: texture.h
engine/include/system/: logging.h  logging_system.h
engine/include/systems/: logging_system.h
engine/src/core/: app.cpp  application.cpp  application.h  camera.cpp  clock.cpp  clock.h  engine.cpp  engine.h  entry_point.cpp  input.cpp  os.cpp
engine/src/event/: event.cpp
engine/src/memory/: allocator.cpp  linear_allocator.cpp  malloc_allocator.cpp  memory_type.cpp  native.cpp
engine/src/nk/: app.cpp  clock.cpp  entry_point.cpp  input.cpp  window.cpp  window_win32.cpp  window_win32.h
engine/src/platform/: file.cpp  file.h  platform.cpp  platform.h  platform_win32.cpp  platform_win32.h
engine/src/renderer/: geometry_render_data.h  global_uniform_object.h  object_uniform_object.h  renderer.cpp  renderer.h
engine/src/renderer/simple-vulkan/: lve_camera.cpp  lve_descriptors.cpp  lve_device.cpp  lve_device.hpp  lve_game_object.hpp  lve_model.cpp  lve_pipeline.cpp  lve_swap_chain.cpp  lve_texture.cpp  lve_texture.hpp  simple_vulkan_renderer.cpp  simple_vulkan_renderer.h
engine/src/renderer/simple-vulkan/systems/: point_light_system.cpp  simple_render_system.cpp  simple_render_system.hpp
engine/src/renderer/vulkan/: buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  device.cpp  device.h  fence.cpp  fence.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  instance.cpp  instance.h  pipeline.cpp  pipeline.h  render_pass.cpp  render_pass.h  renderer_backend.cpp  renderer_backend.h  swapchain.cpp  swapchain.h  utils.cpp  utils.h  vk.h  vulkan.h  vulkan_renderer.cpp  vulkan_renderer.h
engine/src/renderer/vulkan/resources/: texture_data.h
engine/src/renderer/vulkan/shaders/: global_uniform_object.h  object_shader.cpp  object_shader.h  utils.cpp  utils.h
engine/src/system/: event_system.h  input_system.cpp  input_system.h  logging.cpp  logging_system.cpp  memory.cpp  memory.h  memory_system.cpp  memory_system.h
engine/src/systems/: event_system.cpp  event_system.h  input_system.cpp  input_system.h  logging_system.cpp  memory_system.cpp  memory_system.h
tests/: CMakeLists.txt
tests/src/: main.cpp
tests/src/collections/: arr.cpp  dyarr.cpp
tests/src/core/: dyarr.cpp  rb_map.cpp  result.cpp
tests/src/memory/: linear_allocator.cpp  malloc_allocator.cpp
tests/src/system/: memory.cpp
tests/src/systems/: logging_system.cpp  memory_system.cpp
